implement google verification by OAuth2

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -25,11 +25,11 @@
             </div>
             <div class="header__account_photo">
                 <i class="fa-solid fa-circle-user header__account_photo_icon"></i>
+                <img id = "image"/>
             </div>
         </div>
     </div>
     <!--HEADER HERE-->
-
-    
 </body>
+    <script src = "OAuth.js"></script>
 </html>
