--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -27,8 +27,7 @@
                 <i class="fa-solid fa-bell header__account_notification_icon"></i>
             </div>
             <div class="header__account_photo">
-                <i class="fa-solid fa-circle-user header__account_photo_icon"></i>
-                <img id = "image"/>
+                <img src = "Images/profile.png" id = "image"/>
             </div>
         </div>
     </div>
@@ -57,44 +56,44 @@
         </div>
         <div class="sidebar__subInfo_container">
             <div class="sidebar__sub_title">Subscriptions</div>
-            <div class="sidebar__subInfo_card">
+            <div class="sidebar__subInfo_card" >
                 <div class="sidebar__subInfo_photo_container">
-                    <i class="fa-solid fa-circle-user sidebar__subInfo_photo_icon"></i>
+                    <img src = "Images/profile.png" style="width: 100%; height: 2.5em;" id = "chi1" alt = "Images/profile.png">
                 </div>
-                <div class="sidebar__subInfo_channelName">
-                    Channel 1
+                <div class="sidebar__subInfo_channelName" id = "ch1">
+                   
                 </div>
             </div>
-            <div class="sidebar__subInfo_card">
+            <div class="sidebar__subInfo_card" >
                 <div class="sidebar__subInfo_photo_container">
-                    <i class="fa-solid fa-circle-user sidebar__subInfo_photo_icon"></i>
+                    <img src = "Images/profile.png" style="width: 100%; height: 2.5em;" id = "chi2" alt = "Images/profile.png">
                 </div>
-                <div class="sidebar__subInfo_channelName">
-                    Channel 2
+                <div class="sidebar__subInfo_channelName" id = "ch2">
+
                 </div>
             </div>
-            <div class="sidebar__subInfo_card">
+            <div class="sidebar__subInfo_card" >
                 <div class="sidebar__subInfo_photo_container">
-                    <i class="fa-solid fa-circle-user sidebar__subInfo_photo_icon"></i>
+                    <img src = "Images/profile.png" style="width: 100%; height: 2.5em;" id = "chi3" alt = "Images/profile.png">
                 </div>
-                <div class="sidebar__subInfo_channelName">
-                    Long Channel Name 3
+                <div class="sidebar__subInfo_channelName" id = "ch3">
+
                 </div>
             </div>
-            <div class="sidebar__subInfo_card">
+            <div class="sidebar__subInfo_card" >
                 <div class="sidebar__subInfo_photo_container">
-                    <i class="fa-solid fa-circle-user sidebar__subInfo_photo_icon"></i>
+                    <img src = "Images/profile.png" style="width: 100%; height: 2.5em;" id = "chi4" alt = "Images/profile.png">
                 </div>
-                <div class="sidebar__subInfo_channelName">
-                    Channel 4
+                <div class="sidebar__subInfo_channelName" id = "ch4">
+
                 </div>
             </div>
-            <div class="sidebar__subInfo_card">
+            <div class="sidebar__subInfo_card" >
                 <div class="sidebar__subInfo_photo_container">
-                    <i class="fa-solid fa-circle-user sidebar__subInfo_photo_icon"></i>
+                    <img src = "Images/profile.png" style="width: 100%; height: 2.5em;" id = "chi5" alt = "Images/profile.png">
                 </div>
-                <div class="sidebar__subInfo_channelName">
-                    Channel 5
+                <div class="sidebar__subInfo_channelName" id = "ch5">
+      
                 </div>
             </div>
             <div class="sidebar__subInfo_card">
