now all channels are showing

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -54,84 +54,13 @@
                 <div class="sidebar__library_text">Library</div>
             </div>
         </div>
-        <div class="sidebar__subInfo_container">
+        <div class="sidebar__subInfo_container" id = "channelContainer">
             <div class="sidebar__sub_title">Subscriptions</div>
-            <div class="sidebar__subInfo_card" >
+            <div class="sidebar__subInfo_card">
                 <div class="sidebar__subInfo_photo_container">
                     <img src = "Images/profile.png" style="width: 100%; height: 2.5em;" id = "chi1" alt = "Images/profile.png">
                 </div>
-                <div class="sidebar__subInfo_channelName" id = "ch1">
-                   
-                </div>
-            </div>
-            <div class="sidebar__subInfo_card" >
-                <div class="sidebar__subInfo_photo_container">
-                    <img src = "Images/profile.png" style="width: 100%; height: 2.5em;" id = "chi2" alt = "Images/profile.png">
-                </div>
-                <div class="sidebar__subInfo_channelName" id = "ch2">
-
-                </div>
-            </div>
-            <div class="sidebar__subInfo_card" >
-                <div class="sidebar__subInfo_photo_container">
-                    <img src = "Images/profile.png" style="width: 100%; height: 2.5em;" id = "chi3" alt = "Images/profile.png">
-                </div>
-                <div class="sidebar__subInfo_channelName" id = "ch3">
-
-                </div>
-            </div>
-            <div class="sidebar__subInfo_card" >
-                <div class="sidebar__subInfo_photo_container">
-                    <img src = "Images/profile.png" style="width: 100%; height: 2.5em;" id = "chi4" alt = "Images/profile.png">
-                </div>
-                <div class="sidebar__subInfo_channelName" id = "ch4">
-
-                </div>
-            </div>
-            <div class="sidebar__subInfo_card" >
-                <div class="sidebar__subInfo_photo_container">
-                    <img src = "Images/profile.png" style="width: 100%; height: 2.5em;" id = "chi5" alt = "Images/profile.png">
-                </div>
-                <div class="sidebar__subInfo_channelName" id = "ch5">
-      
-                </div>
-            </div>
-            <div class="sidebar__subInfo_card">
-                <div class="sidebar__subInfo_photo_container">
-                    <i class="fa-solid fa-circle-user sidebar__subInfo_photo_icon"></i>
-                </div>
                 <div class="sidebar__subInfo_channelName">
-                    Channel 6
-                </div>
-            </div>
-            <div class="sidebar__subInfo_card">
-                <div class="sidebar__subInfo_photo_container">
-                    <i class="fa-solid fa-circle-user sidebar__subInfo_photo_icon"></i>
-                </div>
-                <div class="sidebar__subInfo_channelName">
-                    Channel 7
-                </div>
-            </div>
-            <div class="sidebar__subInfo_card">
-                <div class="sidebar__subInfo_photo_container">
-                    <i class="fa-solid fa-circle-user sidebar__subInfo_photo_icon"></i>
-                </div>
-                <div class="sidebar__subInfo_channelName">
-                    Channel 8
-                </div>
-            </div>
-            <div class="sidebar__subInfo_card">
-                <div class="sidebar__subInfo_photo_container">
-                    <i class="fa-solid fa-circle-user sidebar__subInfo_photo_icon"></i>
-                </div>
-                <div class="sidebar__subInfo_channelName">
-                    Channel 9 
-                </div>
-            </div>
-            <div class="sidebar__sub_showMore">
-                <i class="fa-solid fa-chevron-down sidebar__sub_showMore_icon"></i>
-                <div class="sidebar__sub_showMore_text">
-                    Show More
                 </div>
             </div>
         </div>
