added playlist list

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -55,170 +55,10 @@
             </div>
         </div>
         <div class="sidebar__subInfo_container" id = "channelContainer">
-            <div class="sidebar__sub_title">Subscriptions</div><!--RIGHT SIDEBAR HERE-->
-            <div class="rightSideBar__Container">
-                <div class="rightsidebar__current_playlist_container">
-                    <div class="right__current_playlist_container">
-                        <div class="right__current_playlist_info">
-                            <div class="right__current_playlist_name">Current Playlist Name</div>
-                            <div class="right__current_channel_info">
-                                <div class="right__current_channel_name">Name</div>
-                                <div class="right__current_completed">1/50</div>
-                            </div>
-                        </div>
-                        <div class="right__current_videos">
-                            <div class="right__video_preview_container">
-                                <div class="right__video_number">1</div>
-                                <div class="right__video_thumbnail">
-                                    <div class="right__video_thumbnail_container">
-                                        <img class="right__video_thumbnail_preview" src="Images/thumbnail.jpg">
-                                        <div class="right__time_container">00:00</div>
-                                    </div>
-                                </div>
-                                <div class="right__video_info">
-                                    <div class="right__video_title">Title</div>
-                                    <div class="right__video_owner">Channel Name</div>
-                                </div>
-                            </div>
-                            <div class="right__video_preview_container">
-                                <div class="right__video_number">1</div>
-                                <div class="right__video_thumbnail">
-                                    <div class="right__video_thumbnail_container">
-                                        <img class="right__video_thumbnail_preview" src="Images/thumbnail.jpg">
-                                        <div class="right__time_container">00:00</div>
-                                    </div>
-                                </div>
-                                <div class="right__video_info">
-                                    <div class="right__video_title">Title</div>
-                                    <div class="right__video_owner">Channel Name</div>
-                                </div>
-                            </div>
-                            <div class="right__video_preview_container">
-                                <div class="right__video_number">1</div>
-                                <div class="right__video_thumbnail">
-                                    <div class="right__video_thumbnail_container">
-                                        <img class="right__video_thumbnail_preview" src="Images/thumbnail.jpg">
-                                        <div class="right__time_container">00:00</div>
-                                    </div>
-                                </div>
-                                <div class="right__video_info">
-                                    <div class="right__video_title">Title</div>
-                                    <div class="right__video_owner">Channel Name</div>
-                                </div>
-                            </div>
-                            <div class="right__video_preview_container">
-                                <div class="right__video_number">1</div>
-                                <div class="right__video_thumbnail">
-                                    <div class="right__video_thumbnail_container">
-                                        <img class="right__video_thumbnail_preview" src="Images/thumbnail.jpg">
-                                        <div class="right__time_container">00:00</div>
-                                    </div>
-                                </div>
-                                <div class="right__video_info">
-                                    <div class="right__video_title">Title</div>
-                                    <div class="right__video_owner">Channel Name</div>
-                                </div>
-                            </div><div class="right__video_preview_container">
-                                <div class="right__video_number">1</div>
-                                <div class="right__video_thumbnail">
-                                    <div class="right__video_thumbnail_container">
-                                        <img class="right__video_thumbnail_preview" src="Images/thumbnail.jpg">
-                                        <div class="right__time_container">00:00</div>
-                                    </div>
-                                </div>
-                                <div class="right__video_info">
-                                    <div class="right__video_title">Title</div>
-                                    <div class="right__video_owner">Channel Name</div>
-                                </div>
-                            </div>
-                            <div class="right__video_preview_container">
-                                <div class="right__video_number">1</div>
-                                <div class="right__video_thumbnail">
-                                    <div class="right__video_thumbnail_container">
-                                        <img class="right__video_thumbnail_preview" src="Images/thumbnail.jpg">
-                                        <div class="right__time_container">00:00</div>
-                                    </div>
-                                </div>
-                                <div class="right__video_info">
-                                    <div class="right__video_title">Title</div>
-                                    <div class="right__video_owner">Channel Name</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="rightsidebar__other_playlist_container">
-                    <div class="rightsidebar__other_playlist">
-                        <div class="rightsidebar__other_playlist_title">Other Playlists</div>
-                        <div class="rightsidebar__other_playlist_preview">
-                            <div class="rightsidebar__other_playlist_box">
-                                <div class="rightsidebar__playlist_image_container">
-                                    <div class="rightsidebar__playlist_image_box">
-                                        <div class="rightsidebar__playlist_totalnumber">
-                                            <i class="fa-solid fa-list playlist_icon_others"></i>
-                                            23
-                                        </div>
-                                        <img class="rightsidebar__playlist_image" src="Images/thumbnail.jpg">
-                                    </div>
-                                </div>
-                                <div class="rightsidebar__playlist_info_container">
-                                    <div class="rightsidebar__playlist_info_title">Other Playlist name</div>
-                                    <div class="rightsidebar__playlist_info_owner">Playlist Owner Name</div>
-                                </div>
-                            </div>
-                            <div class="rightsidebar__other_playlist_box">
-                                <div class="rightsidebar__playlist_image_container">
-                                    <div class="rightsidebar__playlist_image_box">
-                                        <div class="rightsidebar__playlist_totalnumber">
-                                            <i class="fa-solid fa-list playlist_icon_others"></i>
-                                            23
-                                        </div>
-                                        <img class="rightsidebar__playlist_image" src="Images/thumbnail.jpg">
-                                    </div>
-                                </div>
-                                <div class="rightsidebar__playlist_info_container">
-                                    <div class="rightsidebar__playlist_info_title">Other Playlist name</div>
-                                    <div class="rightsidebar__playlist_info_owner">Playlist Owner Name</div>
-                                </div>
-                            </div>
-                            <div class="rightsidebar__other_playlist_box">
-                                <div class="rightsidebar__playlist_image_container">
-                                    <div class="rightsidebar__playlist_image_box">
-                                        <div class="rightsidebar__playlist_totalnumber">
-                                            <i class="fa-solid fa-list playlist_icon_others"></i>
-                                            23
-                                        </div>
-                                        <img class="rightsidebar__playlist_image" src="Images/thumbnail.jpg">
-                                    </div>
-                                </div>
-                                <div class="rightsidebar__playlist_info_container">
-                                    <div class="rightsidebar__playlist_info_title">Other Playlist name</div>
-                                    <div class="rightsidebar__playlist_info_owner">Playlist Owner Name</div>
-                                </div>
-                            </div>
-                            <div class="rightsidebar__other_playlist_box">
-                                <div class="rightsidebar__playlist_image_container">
-                                    <div class="rightsidebar__playlist_image_box">
-                                        <div class="rightsidebar__playlist_totalnumber">
-                                            <i class="fa-solid fa-list playlist_icon_others"></i>
-                                            23
-                                        </div>
-                                        <img class="rightsidebar__playlist_image" src="Images/thumbnail.jpg">
-                                    </div>
-                                </div>
-                                <div class="rightsidebar__playlist_info_container">
-                                    <div class="rightsidebar__playlist_info_title">Other Playlist name</div>
-                                    <div class="rightsidebar__playlist_info_owner">Playlist Owner Name</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--RIGHT SIDEBAR HERE-->
+            <div class="sidebar__sub_title">Subscriptions</div>
             <div class="sidebar__subInfo_card">
                 <div class="sidebar__subInfo_photo_container">
-                    <img src = "Images/profile.png" style="width: 100%; height: 2.5em;" id = "chi1" alt = "Images/profile.png">
+                    <img src = "Images/profile.png" style="width: 80%; height: 2.5em; padding-left: 10px;" id = "chi1" alt = "Images/profile.png">
                 </div>
                 <div class="sidebar__subInfo_channelName">
                 </div>
@@ -322,74 +162,28 @@
             </div>
         </div>
         <div class="rightsidebar__other_playlist_container">
-            <div class="rightsidebar__other_playlist">
+            <div class="rightsidebar__other_playlist" >
                 <div class="rightsidebar__other_playlist_title">Other Playlists</div>
-                <div class="rightsidebar__other_playlist_preview">
-                    <div class="rightsidebar__other_playlist_box">
+                <div class="rightsidebar__other_playlist_preview" id = "playlistContainer">
+                    <div class="rightsidebar__other_playlist_box" id = "playlistElement">
                         <div class="rightsidebar__playlist_image_container">
                             <div class="rightsidebar__playlist_image_box">
                                 <div class="rightsidebar__playlist_totalnumber">
                                     <i class="fa-solid fa-list playlist_icon_others"></i>
-                                    23
+            
                                 </div>
                                 <img class="rightsidebar__playlist_image" src="Images/thumbnail.jpg">
                             </div>
                         </div>
                         <div class="rightsidebar__playlist_info_container">
-                            <div class="rightsidebar__playlist_info_title">Other Playlist name</div>
-                            <div class="rightsidebar__playlist_info_owner">Playlist Owner Name</div>
-                        </div>
-                    </div>
-                    <div class="rightsidebar__other_playlist_box">
-                        <div class="rightsidebar__playlist_image_container">
-                            <div class="rightsidebar__playlist_image_box">
-                                <div class="rightsidebar__playlist_totalnumber">
-                                    <i class="fa-solid fa-list playlist_icon_others"></i>
-                                    23
-                                </div>
-                                <img class="rightsidebar__playlist_image" src="Images/thumbnail.jpg">
-                            </div>
-                        </div>
-                        <div class="rightsidebar__playlist_info_container">
-                            <div class="rightsidebar__playlist_info_title">Other Playlist name</div>
-                            <div class="rightsidebar__playlist_info_owner">Playlist Owner Name</div>
-                        </div>
-                    </div>
-                    <div class="rightsidebar__other_playlist_box">
-                        <div class="rightsidebar__playlist_image_container">
-                            <div class="rightsidebar__playlist_image_box">
-                                <div class="rightsidebar__playlist_totalnumber">
-                                    <i class="fa-solid fa-list playlist_icon_others"></i>
-                                    23
-                                </div>
-                                <img class="rightsidebar__playlist_image" src="Images/thumbnail.jpg">
-                            </div>
-                        </div>
-                        <div class="rightsidebar__playlist_info_container">
-                            <div class="rightsidebar__playlist_info_title">Other Playlist name</div>
-                            <div class="rightsidebar__playlist_info_owner">Playlist Owner Name</div>
-                        </div>
-                    </div>
-                    <div class="rightsidebar__other_playlist_box">
-                        <div class="rightsidebar__playlist_image_container">
-                            <div class="rightsidebar__playlist_image_box">
-                                <div class="rightsidebar__playlist_totalnumber">
-                                    <i class="fa-solid fa-list playlist_icon_others"></i>
-                                    23
-                                </div>
-                                <img class="rightsidebar__playlist_image" src="Images/thumbnail.jpg">
-                            </div>
-                        </div>
-                        <div class="rightsidebar__playlist_info_container">
-                            <div class="rightsidebar__playlist_info_title">Other Playlist name</div>
-                            <div class="rightsidebar__playlist_info_owner">Playlist Owner Name</div>
+                            <div class="rightsidebar__playlist_info_title"></div>
+                            <div class="rightsidebar__playlist_info_owner"></div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!--RIGHT SIDEBAR HERE-->
     
 </body>
     <script src = "OAuth.js"></script>
