--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -184,6 +184,7 @@
             </div>
         </div>
     </div>
+    <!--RIGHT SIDEBAR HERE-->
     
 </body>
     <script src = "OAuth.js"></script>
