added videos of the playlist to the video container with link

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -73,15 +73,15 @@
     <div class="rightSideBar__Container">
         <div class="rightsidebar__current_playlist_container">
             <div class="right__current_playlist_container">
-                <div class="right__current_playlist_info">
-                    <div class="right__current_playlist_name">Current Playlist Name</div>
+                <div class="right__current_playlist_info" id = "currentPlaylist">
+                    <div class="right__current_playlist_name">Title</div>
                     <div class="right__current_channel_info">
                         <div class="right__current_channel_name">Name</div>
                         <div class="right__current_completed">1/50</div>
                     </div>
                 </div>
-                <div class="right__current_videos">
-                    <div class="right__video_preview_container">
+                <div class="right__current_videos" id = "playlistVideoContainer">
+                    <div class="right__video_preview_container" id = "playlistVideoDiv">
                         <div class="right__video_number">1</div>
                         <div class="right__video_thumbnail">
                             <div class="right__video_thumbnail_container">
@@ -90,71 +90,7 @@
                             </div>
                         </div>
                         <div class="right__video_info">
-                            <div class="right__video_title">Title</div>
-                            <div class="right__video_owner">Channel Name</div>
-                        </div>
-                    </div>
-                    <div class="right__video_preview_container">
-                        <div class="right__video_number">1</div>
-                        <div class="right__video_thumbnail">
-                            <div class="right__video_thumbnail_container">
-                                <img class="right__video_thumbnail_preview" src="Images/thumbnail.jpg">
-                                <div class="right__time_container">00:00</div>
-                            </div>
-                        </div>
-                        <div class="right__video_info">
-                            <div class="right__video_title">Title</div>
-                            <div class="right__video_owner">Channel Name</div>
-                        </div>
-                    </div>
-                    <div class="right__video_preview_container">
-                        <div class="right__video_number">1</div>
-                        <div class="right__video_thumbnail">
-                            <div class="right__video_thumbnail_container">
-                                <img class="right__video_thumbnail_preview" src="Images/thumbnail.jpg">
-                                <div class="right__time_container">00:00</div>
-                            </div>
-                        </div>
-                        <div class="right__video_info">
-                            <div class="right__video_title">Title</div>
-                            <div class="right__video_owner">Channel Name</div>
-                        </div>
-                    </div>
-                    <div class="right__video_preview_container">
-                        <div class="right__video_number">1</div>
-                        <div class="right__video_thumbnail">
-                            <div class="right__video_thumbnail_container">
-                                <img class="right__video_thumbnail_preview" src="Images/thumbnail.jpg">
-                                <div class="right__time_container">00:00</div>
-                            </div>
-                        </div>
-                        <div class="right__video_info">
-                            <div class="right__video_title">Title</div>
-                            <div class="right__video_owner">Channel Name</div>
-                        </div>
-                    </div><div class="right__video_preview_container">
-                        <div class="right__video_number">1</div>
-                        <div class="right__video_thumbnail">
-                            <div class="right__video_thumbnail_container">
-                                <img class="right__video_thumbnail_preview" src="Images/thumbnail.jpg">
-                                <div class="right__time_container">00:00</div>
-                            </div>
-                        </div>
-                        <div class="right__video_info">
-                            <div class="right__video_title">Title</div>
-                            <div class="right__video_owner">Channel Name</div>
-                        </div>
-                    </div>
-                    <div class="right__video_preview_container">
-                        <div class="right__video_number">1</div>
-                        <div class="right__video_thumbnail">
-                            <div class="right__video_thumbnail_container">
-                                <img class="right__video_thumbnail_preview" src="Images/thumbnail.jpg">
-                                <div class="right__time_container">00:00</div>
-                            </div>
-                        </div>
-                        <div class="right__video_info">
-                            <div class="right__video_title">Title</div>
+                            <div class="right__video_title" style="font-size: small;">Title</div>
                             <div class="right__video_owner">Channel Name</div>
                         </div>
                     </div>
