--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -120,8 +120,15 @@
             </div>
         </div>
     </div>
-    <!--RIGHT SIDEBAR HERE-->
+
     
+    <div class="main__video_playback_container" style="display: none" id="smallVideoPlayback">
+        <div class="main__video_playback">
+            <iframe class="main_video" src="" style="height: 100%; width: 100%;"></iframe>
+        </div>
+    </div>
+
 </body>
     <script src = "OAuth.js"></script>
+    <script src="styleScript.js"></script>
 </html>
