--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -121,10 +121,24 @@
         </div>
     </div>
 
-    
+    <!--video playback-->
     <div class="main__video_playback_container" style="display: none" id="smallVideoPlayback">
         <div class="main__video_playback">
             <iframe class="main_video" src="" style="height: 100%; width: 100%;"></iframe>
+        </div>
+    </div>
+
+    <!--Channel page-->
+    <div class="channel_page_container">
+        <div class="channel_info_container">
+            <img src="Images/profile.png"/>
+            <h1 style="color: white;">Channel Name</h1>
+        </div>
+        <div class="channel_video_container">
+            
+        </div>
+        <div class="channel_playlist_container">
+
         </div>
     </div>
 
